# solana-arb-backtest

./: .env.example  .gitignore  Cargo.toml  LAUNCH.md  README.md  RUN.md  arb.config.example.json  package-lock.json  package.json
runs/: executor.sh  liq.sh  liq_all.sh  liq_kamino.sh  liq_save.sh  spyx.env
runs/liq/: decisions.jsonl
runs/save/: decisions.jsonl
scripts/: latency.sh
src/: arb.rs  bitquery.ts  clmm.rs  config.ts  decode.rs  detect.ts  detector.rs  execute.rs  flashloan.rs  flipside.ts  grpc-test.ts  grpc.rs  index.ts  jito.rs  jup.rs  jupiter.rs  jupiter_fire.rs  jupiter_math.rs  kamino.rs  kamino_engine.rs  kamino_fire.rs  kamino_ix.rs  lazer.rs  leg1-trigger.ts  lib.rs  liq_engine.rs  liq_fire.rs  liquidation.rs  main.rs  marginfi.rs  observe.rs  phase-a-timing.ts  phase-a.ts  pools.rs  pump.rs  pyth.rs  pyth_accumulator.rs  pyth_crank.rs  query.ts  save.rs  (+8 more)
src/engine/: detector.ts  grpc-feed.ts  shadow-live.ts  shadow.ts  shredstream-feed.ts
