[package]
name = "arb-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "arb_engine"
path = "src/lib.rs"

[[bin]]
name = "shadow"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
bs58 = "0.5"
dotenvy = "0.15"
yellowstone-grpc-client = "13.2.0"
yellowstone-grpc-proto = "12.5.0"
rustls = { version = "0.23.41", default-features = false, features = ["ring"] }
shredstream = "2.0.0"
solana-transaction = "3.1.0"
solana-message = "3.1.0"
solana-pubkey = "3.0.0"
solana-instruction = "3.0.0"
solana-hash = "3.0.0"
solana-signature = "3.0.0"
bincode = "1"
base64 = "0.22"
serde_json = "1"
ureq = { version = "2", features = ["json"] }
